barbados ad css

--- a/sites/barbadosadvocate.com/themes/cni/css/responsive.css
+++ b/sites/barbadosadvocate.com/themes/cni/css/responsive.css
@@ -81,6 +81,7 @@
     /* set ad width for block under slideshow */
     #block-simpleads-ad-groups-1408 .content {
         width: 468px;
+        margin: 0 auto;
     }
 
 
