barbados ad css

--- a/sites/barbadosadvocate.com/themes/cni/css/theme.css
+++ b/sites/barbadosadvocate.com/themes/cni/css/theme.css
@@ -602,9 +602,10 @@ article .field-image {
 
 .node .field-name-field-image img {
     display: block;
-    margin-top: -20px;
+    margin-top: 0;
     margin-left: 0;
     margin-bottom: 10px;
+    width: 100%;
 }
 
 .node .field-name-field-video iframe {
