--- a/sites/barbadosadvocate.com/themes/cni/css/theme.css
+++ b/sites/barbadosadvocate.com/themes/cni/css/theme.css
@@ -605,7 +605,7 @@ article .field-image {
 /* NODES
 --------------------------------------------------------------------------*/
 
-.node-article .field-name-field-image img {
+.node .field-name-field-image img {
     display: block;
     margin-top: 0;
     margin-left: 0;
@@ -700,6 +700,7 @@ article .field-image {
     float: left;
     margin: 0 20px 0 0;
     background: url(../images/image-background.png);
+    width: 100px;
 }
 
 /* COMMENTS
