--- a/sites/barbadosadvocate.com/themes/cni/css/theme.css
+++ b/sites/barbadosadvocate.com/themes/cni/css/theme.css
@@ -184,6 +184,12 @@ h3.site-slogan {
     margin-right: 0;
 }
 
+
+.front .homepage-block-img .image-field-caption {
+    display: none;
+    visibility: hidden;
+}
+
 /* PREFACE 
 --------------------------------------------------------------------------*/
 
