--- a/sites/beacononlinenews.com/themes/news_center/css/news_center.css
+++ b/sites/beacononlinenews.com/themes/news_center/css/news_center.css
@@ -357,3 +357,9 @@ h2.node-title{}
 min-width:212px!important;
 }
 .homepage-block-img {width:0px; height:0px; float:left;}
+
+/* hide captions on home page */
+.front .homepage-block-img .image-field-caption {
+    display: none;
+    visibility: hidden;
+}
