--- a/sites/beacononlinenews.com/themes/news_center/css/ie-tablet-layout.css
+++ b/sites/beacononlinenews.com/themes/news_center/css/ie-tablet-layout.css
@@ -510,12 +510,7 @@ a.back-to-top:hover, a.back-to-top:active {
     width: 100%;
 }
 
-#block-views-featured-article-block .views-row img{
-    max-width: 212px;
-	width: 40%;
-	max-height: 160px;
-	height: auto;
-}
+#block-views-featured-article-block .views-row img{width:100px;height:auto;}
 
 #block-views-articles-images-block .views-row img {
     height: auto;
