--- a/sites/beacononlinenews.com/themes/news_center/css/news_center.css
+++ b/sites/beacononlinenews.com/themes/news_center/css/news_center.css
@@ -358,7 +358,7 @@ min-width:212px!important;
 }
 
 /* hide captions on home page */
-.front .homepage-block-img .image-field-caption {
+#block-views-featured-article-block .views-row. .image-field-caption, .front .homepage-block-img .image-field-caption {
     display: none;
     visibility: hidden;
 }
