--- a/sites/beacononlinenews.com/themes/news_center/css/ie-screen-layout.css
+++ b/sites/beacononlinenews.com/themes/news_center/css/ie-screen-layout.css
@@ -617,11 +617,7 @@ body.node-type-article .node .submitted {
 }
 
 #block-widgets-s-addthis-share {
-    float: right;
-    margin-right: 4px;
-    margin-top: 40px;
-    position: absolute;
-    left: 443px;
+    float: left;
 }
 
 #block-widgets-s-addthis-share div.widgets-element-horizontal {
