--- a/sites/beacononlinenews.com/themes/news_center/css/mobile-portrait-layout.css
+++ b/sites/beacononlinenews.com/themes/news_center/css/mobile-portrait-layout.css
@@ -222,7 +222,7 @@ body.node-type-article .node .submitted{border-bottom:1px solid #CCCCCC;color:#7
 
 body.node-type-article .node .content{padding-top:82px;}
 
-#block-widgets-s-addthis-share{float:right;margin-right:4px;/*margin-top:36px;*/margin-top:100px;position:absolute;left:0px;}
+#block-widgets-s-addthis-share{float:left;}
 
 #block-widgets-s-addthis-share div.widgets-element-horizontal{float:left;padding:4px 10px;}
 
