--- a/sites/beacononlinenews.com/themes/news_center/css/news_center.css
+++ b/sites/beacononlinenews.com/themes/news_center/css/news_center.css
@@ -364,3 +364,7 @@ min-width:212px!important;
     display: none;
     visibility: hidden;
 }
+
+.page-node .node-article .image-field-caption {
+    float: left;
+}
