--- a/sites/beacononlinenews.com/themes/news_center/css/comments.css
+++ b/sites/beacononlinenews.com/themes/news_center/css/comments.css
@@ -1,45 +1,71 @@
-#comments{margin:1.5em 0;}
+#comments {
+    margin: 1.5em 0;
+}
 
-#comments h2.title{}
+#comments h2.title {
+}
 
-#comments h2.comment-form{}
+#comments h2.comment-form {
+}
 
-.comment{}
+.comment {
+}
 
-.comment-preview{background-color:#ffffea;}
+.comment-preview {
+    background-color: #ffffea;
+}
 
-.comment.new{}
+.comment.new {
+}
 
-.comment.first{}
+.comment.first {
+}
 
-.comment.last{}
+.comment.last {
+}
 
-.comment.odd{}
+.comment.odd {
+}
 
-.comment.even{}
+.comment.even {
+}
 
-.comment-unpublished{}
+.comment-unpublished {
+}
 
-.comment-unpublished div.unpublished{}
+.comment-unpublished div.unpublished {
+}
 
-.comment-by-anonymous{}
+.comment-by-anonymous {
+}
 
-.comment-by-node-author{}
+.comment-by-node-author {
+}
 
-.comment-by-viewer{}
+.comment-by-viewer {
+}
 
-h3.comment-title{}
+h3.comment-title {
+}
 
-.new{color:#c00;}
+.new {
+    color: #c00;
+}
 
-.comment .user-picture{}
+.comment .user-picture {
+}
 
-.comment .submitted{}
+.comment .submitted {
+}
 
-.comment .content{}
+.comment .content {
+}
 
-.comment .user-signature{}
+.comment .user-signature {
+}
 
-.comment ul.links{}
+.comment ul.links {
+}
 
-.indented{}
+.indented {
+}
