--- a/sites/beacononlinenews.com/themes/news_center/css/navigation.css
+++ b/sites/beacononlinenews.com/themes/news_center/css/navigation.css
@@ -1,21 +1,35 @@
-li a.active{color:#000;}
+li a.active {
+    color: #000;
+}
 
-#navigation{}
+#navigation {
+}
 
 #navigation ul.links,
-
-#navigation .content ul{margin:0;padding:0;text-align:left;}
+#navigation .content ul {
+    margin: 0;
+    padding: 0;
+    text-align: left;
+}
 
 #navigation ul.links li,
+#navigation .content li {
+    float: left;
+    padding: 0 10px 0 0;
+}
 
-#navigation .content li{float:left;padding:0 10px 0 0;}
+.region-navigation {
+}
 
-.region-navigation{}
+#main-menu {
+}
 
-#main-menu{}
+#secondary-menu {
+    float: right;
+}
 
-#secondary-menu{float:right;}
+.block-menu {
+}
 
-.block-menu{}
-
-.block-menu-block{}
+.block-menu-block {
+}
