volusia beacon ad

--- a/sites/beacononlinenews.com/themes/news_center/css/screen-layout.css
+++ b/sites/beacononlinenews.com/themes/news_center/css/screen-layout.css
@@ -833,11 +833,11 @@ a img {
 }
 
 .field_ad_image p {
-    margin: 0 auto;
+    text-align: center;
 }
 
 .field_ad_image .field_ad_image_inner {
-    margin: 2em auto 0;
+    margin: 0.5em auto 0;
     width: 468px;
     height: 60px;
 }
