--- a/sites/beacononlinenews.com/themes/news_center/css/ie-mobile-landscape-layout.css
+++ b/sites/beacononlinenews.com/themes/news_center/css/ie-mobile-landscape-layout.css
@@ -818,13 +818,13 @@ body.page-taxonomy-term .node-article.node-teaser img {
 }
 
 .field_ad_image .field_ad_image_inner {
-    margin: 2em auto 0;
+    margin: 0.5em auto 0;
     width: 468px;
     height: 60px;
 }
 
 .field_ad_image p {
-    margin: 0 auto;
+    text-align: center;
 }
 
 .field_ad_image .field_ad_image_inner img {
