--- a/sites/beacononlinenews.com/themes/news_center/css/mobile-portrait-layout.css
+++ b/sites/beacononlinenews.com/themes/news_center/css/mobile-portrait-layout.css
@@ -907,11 +907,11 @@ pre {
 }
 
 .field_ad_image p {
-    margin: 0 auto;
+    text-align: center;
 }
 
 .field_ad_image .field_ad_image_inner {
-    margin: 2em auto 0;
+    margin: 0.5em auto 0;
     width: 300px;
     height: auto;
 }
