--- a/sites/beacononlinenews.com/themes/news_center/css/mobile-landscape-layout.css
+++ b/sites/beacononlinenews.com/themes/news_center/css/mobile-landscape-layout.css
@@ -853,6 +853,7 @@ body.node-type-article #comments .node .content {
 
 /* node ad */
 .field_ad_image {
+    margin-top: 0.5em;
     display: block;
     visibility: visible;
 }
@@ -862,7 +863,7 @@ body.node-type-article #comments .node .content {
 }
 
 .field_ad_image .field_ad_image_inner {
-    margin: 0.5em auto 0;
+    margin: 0 auto 0;
     width: 468px;
     height: 60px;
 }
