--- a/sites/beacononlinenews.com/themes/news_center/css/ie-screen-layout.css
+++ b/sites/beacononlinenews.com/themes/news_center/css/ie-screen-layout.css
@@ -668,6 +668,7 @@ body.page-taxonomy-term .node-teaser .submitted {
 
 /* node ad */
 .field_ad_image {
+    margin-top: 0.5em;
     display: block;
     visibility: visible;
 }
@@ -677,7 +678,7 @@ body.page-taxonomy-term .node-teaser .submitted {
 }
 
 .field_ad_image .field_ad_image_inner {
-    margin: 0.5em auto 0;
+    margin: 0 auto 0;
     width: 468px;
     height: 60px;
 }
