--- a/sites/beacononlinenews.com/themes/news_center/css/mobile-portrait-layout.css
+++ b/sites/beacononlinenews.com/themes/news_center/css/mobile-portrait-layout.css
@@ -902,6 +902,7 @@ pre {
 /* node ad */
 /* node ad */
 .field_ad_image {
+    margin-top: 0.5em;
     display: block;
     visibility: visible;
 }
@@ -911,7 +912,7 @@ pre {
 }
 
 .field_ad_image .field_ad_image_inner {
-    margin: 0.5em auto 0;
+    margin: 0 auto 0;
     width: 300px;
     height: auto;
 }
