--- a/sites/beacononlinenews.com/themes/news_center/css/screen-layout.css
+++ b/sites/beacononlinenews.com/themes/news_center/css/screen-layout.css
@@ -828,6 +828,7 @@ a img {
 
 /* node ad */
 .field_ad_image {
+    margin-top: 0.5em;
     display: block;
     visibility: visible;
 }
@@ -837,7 +838,7 @@ a img {
 }
 
 .field_ad_image .field_ad_image_inner {
-    margin: 0.5em auto 0;
+    margin: 0 auto 0;
     width: 468px;
     height: 60px;
 }
