--- a/sites/beacononlinenews.com/themes/news_center/css/mobile-landscape-layout.css
+++ b/sites/beacononlinenews.com/themes/news_center/css/mobile-landscape-layout.css
@@ -863,7 +863,7 @@ body.node-type-article #comments .node .content {
 }
 
 .field_ad_image .field_ad_image_inner {
-    margin: 0 auto 0;
+    margin: 0 auto;
     width: 468px;
     height: 60px;
 }
