--- a/sites/beacononlinenews.com/themes/news_center/css/mobile-portrait-layout.css
+++ b/sites/beacononlinenews.com/themes/news_center/css/mobile-portrait-layout.css
@@ -912,7 +912,7 @@ pre {
 }
 
 .field_ad_image .field_ad_image_inner {
-    margin: 0 auto 0;
+    margin: 0 auto;
     width: 300px;
     height: auto;
 }
