--- a/sites/beacononlinenews.com/themes/news_center/css/ie-tablet-layout.css
+++ b/sites/beacononlinenews.com/themes/news_center/css/ie-tablet-layout.css
@@ -881,7 +881,7 @@ body.page-taxonomy-term .node-article.node-teaser img {
 }
 
 .field_ad_image .field_ad_image_inner {
-    margin: 0 auto 0;
+    margin: 0 auto;
     width: 468px;
     height: 60px;
 }
