--- a/sites/beacononlinenews.com/themes/news_center/css/screen-layout.css
+++ b/sites/beacononlinenews.com/themes/news_center/css/screen-layout.css
@@ -838,7 +838,7 @@ a img {
 }
 
 .field_ad_image .field_ad_image_inner {
-    margin: 0 auto 0;
+    margin: 0 auto;
     width: 468px;
     height: 60px;
 }
