volusia beacon ad

--- a/sites/beacononlinenews.com/themes/news_center/css/tablet-layout.css
+++ b/sites/beacononlinenews.com/themes/news_center/css/tablet-layout.css
@@ -875,6 +875,7 @@ body.page-taxonomy-term .node-article.node-teaser img {
 }
 
 .field_ad_image p {
+    margin-bottom: 0;
     text-align: center;
 }
 
