--- a/sites/beacononlinenews.com/themes/news_center/css/mobile-portrait-layout.css
+++ b/sites/beacononlinenews.com/themes/news_center/css/mobile-portrait-layout.css
@@ -139,7 +139,7 @@ h2, h3, h4, h5, h6 {
 }
 
 #block-superfish-1 ul li a {
-    background: #000 url("../images/mobile_menu.png") no-repeat scroll 7px 8px transparent;
+    background: #000 url("../images/mobile_menu.png") no-repeat scroll 7px 8px;
     color: #FFFFFF;
     display: block;
     font-weight: bold;
@@ -155,7 +155,7 @@ h2, h3, h4, h5, h6 {
 
 #block-superfish-1 ul li a.active, #block-superfish-1 ul li a.active-trail, #block-superfish-1 ul li a:hover {
     color: #f2f2f2;
-    background: #f2f2f2 url("../images/mobile_menu.png") no-repeat scroll 7px 8px transparent;
+    background: #f2f2f2 url("../images/mobile_menu.png") no-repeat scroll 7px 8px;
 }
 
 .image-show {
@@ -908,6 +908,7 @@ pre {
 }
 
 .field_ad_image p {
+    margin-bottom: 0;
     text-align: center;
 }
 
