--- a/sites/plaqueminesgazette.com/themes/masthead/css/style1.css
+++ b/sites/plaqueminesgazette.com/themes/masthead/css/style1.css
@@ -901,7 +901,7 @@ ul.quicktabs-tabs.quicktabs-style-nostyle li {
   border:1px solid #e5e5e5;
   border-bottom:none;
   padding:2px 3px;
-  margin:0 0 0 0;
+  margin:0;
   position:relative;
 }
 
