--- a/sites/mysanfordherald.com/themes/news_center/css/screen-layout.css
+++ b/sites/mysanfordherald.com/themes/news_center/css/screen-layout.css
@@ -1,7 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:600,300,400,700);
 
 body {
-    background: url("../images/body.png") repeat-x #CBCBCB;
+    background: url("../images/body.png") repeat-x #ffffff;
     font-family: 'Open Sans', sans-serif;
 }
 
