--- a/sites/mysanfordherald.com/themes/news_center/css/blueprint/screen.css
+++ b/sites/mysanfordherald.com/themes/news_center/css/blueprint/screen.css
@@ -140,10 +140,13 @@ a {
     text-decoration: underline;
 }
 
+/* added float:left and max-width to fix captions running into body copy */
 blockquote {
     margin: 1.5em;
     color: #666;
     font-style: italic;
+	float: left;
+	max-width: 395px;
 }
 
 strong, dfn {
