--- a/sites/thekansascityglobe.com/themes/news_center/css/news_center.css
+++ b/sites/thekansascityglobe.com/themes/news_center/css/news_center.css
@@ -284,7 +284,7 @@ h2.node-title{}
 
 .block-simplenews .form-item{margin-bottom:7px;margin-top:14px;}
 
-#block-block-1{border-top:1px solid #424141;clear:both;margin:35px 12px 0;padding:15px 10px 0;}
+#block-block-1{clear:both;margin:0;padding: 0;}
 
 #block-block-1 p{margin:0;color:#969696;}
 
@@ -348,3 +348,9 @@ h2.node-title{}
 #block-simpleads-ad-groups-22 {display:block; text-align: center;}
 
 #block-simpleads-ad-groups-45 {display:block; text-align: center;}
+#block-simpleads-ad-groups-65 {display:block; text-align: center;}
+#block-simpleads-ad-groups-52 {display:block; text-align: center;}
+
+#block-simpleads-ad-groups-51 img {width:300px;height:auto;margin-left:-10px; margin-bottom:10px;}
+
+#block-block-5 img {max-width:100%;}
