--- a/sites/thekansascityglobe.com/themes/news_center/css/pages.css
+++ b/sites/thekansascityglobe.com/themes/news_center/css/pages.css
@@ -98,7 +98,7 @@ ul.links li{padding:0 1em 0 0;}
 
 .item-list .pager li{padding:0 0.5em;}
 
-.feed-icon{}
+.feed-icon{visibility:hidden;}
 
 .more-link{}
 
