--- a/sites/auroranewsregister.com/themes/news_center/css/news_center.css
+++ b/sites/auroranewsregister.com/themes/news_center/css/news_center.css
@@ -349,6 +349,6 @@ h2.node-title{}
 #block-simpleads-ad-groups-65 img{width: 468px; height: 90px; float: left; display: block; clear:none; margin: 10px 10px;}
 #block-simpleads-ad-groups-66 img{width: 468px; height: 90px; float: right; display: block; clear:none; margin: 10px 10px;}
 
-#block-simpleads-ad-groups-62, #block-simpleads-ad-groups-63, #block-simpleads-ad-groups-64, #block-simpleads-ad-groups-67 {background:transparent;margin-left:-10px; width:300px;}
+#block-simpleads-ad-groups-62, #block-simpleads-ad-groups-63, #block-simpleads-ad-groups-64, #block-simpleads-ad-groups-67, #block-simpleads-ad-groups-68 {background:transparent;margin-left:-10px; width:300px;}
 
-#block-simpleads-ad-groups-62 img, #block-simpleads-ad-groups-63 img, #block-simpleads-ad-groups-64 img, #block-simpleads-ad-groups-67 img {width:300px;height:250px;margin-bottom:10px;}
+#block-simpleads-ad-groups-62 img, #block-simpleads-ad-groups-63 img, #block-simpleads-ad-groups-64 img, #block-simpleads-ad-groups-67 img, #block-simpleads-ad-groups-68 img {width:300px;height:250px;margin-bottom:10px;}
