--- a/sites/douglasenterprise.net/themes/cni/css/theme.css
+++ b/sites/douglasenterprise.net/themes/cni/css/theme.css
@@ -1469,3 +1469,11 @@ textarea, select, input[type="date"], input[type="datetime"], input[type="dateti
 .region-main-menu .contextual-links-region #block-simpleads-ad-groups-436 {
 	text-align:center;
 }
+
+/* IMAGE CAPTIONS */
+/* hide captions on home page */
+.front .view-id-slideshow .image-field-caption,
+.egion-preface-1 .views-field-field-image .image-field-caption {
+    display: none;
+    visibility: hidden;
+}
