--- a/sites/msgr.com/themes/news_center/css/news_center.css
+++ b/sites/msgr.com/themes/news_center/css/news_center.css
@@ -348,7 +348,7 @@ h2.node-title{}
 
 #block-simpleads-ad-groups-42 {height:90px; width:728px;margin-left:-10px;margin-bottom:5px;}
 #block-simpleads-ad-groups-23 {height:90px; width:468px;margin-left:-10px;margin-bottom:5px;}
-.block-simpleads-ad-groups-43 {
+#block-simpleads-ad-groups-43 {
     max-width: 728px;
     margin: 0 auto;
 }
