--- a/sites/lakeoconeenews.us/themes/news_center/css/news_center.css
+++ b/sites/lakeoconeenews.us/themes/news_center/css/news_center.css
@@ -353,3 +353,9 @@ h2.node-title{}
 #block-views-breaking-news-block {display:block; width:728px; height: 60px; background-color:#FF0000; margin-left:-10px; margin-bottom: 8px; overflow:hidden;}
 #block-views-breaking-news-block a {color: #ffffff; font-size: 18px; line-height:24px; margin-left: 15px;}
 #block-views-breaking-news-block h2.block-title {border-bottom: 1px dashed #ffffff; color: #ffffff; font-family: "Open Sans",sans-serif; font-size: 24px; font-weight: 300;}
+
+/* hide captions on front and taxonomy page */
+.node-teaser .image-field-caption, .front .views-field-field-image .image-field-caption {
+    display: none;
+    visibility: hidden;
+}
